--- a/auto.html
+++ b/auto.html
@@ -8,39 +8,15 @@
 
  <link rel="canonical" href="http://conemu.github.io" />
 
+ <link rel="stylesheet" href="main.css">
+
  <title>Automate install of ConEmu portable</title>
-
- <style type="text/css">
-
- .text {
-  max-width: 800px;
-  margin-top: 5pt;
-  margin-bottom: 5pt;
- }
-
- .code {
-  max-width: 800px;
-  font-size: small;
-  font-family: monospace
-  border: 1px solid black;
-  background-color: lightgray;
-  color: black;
-  overflow: auto;
- }
-
- .pad0 {
-  margin-top: 0;
-  margin-bottom: 5pt;
- }
-
- .pad1 {
-  margin-bottom: 5pt;
- }
- </style>
 
 <body>
 
-<div class="maincol" align="center">
+<div class="wrapper">
+<div class="maincol">
+
 <table cellpadding="0" cellspacing="0"><tr><td valign="top">
 <h2 class="pad0">Abstract</h2>
 <div class="text">If you need to automate your box installation, this page describes how to
@@ -57,8 +33,7 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 
 <div class="text">Just copy the following command, press ‘Win+R’, paste command and press ‘Enter’.</div>
 
-<div class="code">powershell -NoProfile -ExecutionPolicy Unrestricted
--Command "iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install.ps1'))"</div>
+<code>powershell -NoProfile -ExecutionPolicy Unrestricted -Command "iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install.ps1'))"</code>
 
 
 
@@ -76,17 +51,7 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 
 <div class="text">Paste the following command to your box startup script (cmd-file for example) and change arguments to desired values.</div>
 
-<div class="code">powershell -NoProfile -ExecutionPolicy Unrestricted
--Command "set ver 'alpha';
-set dst 'C:\ConEmu';
-set lnk $TRUE;
-set run $TRUE;
-set xml 'https://conemu.github.io/ConEmu.xml';
-iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install2.ps1'))"
-</div>
-
-<!--<h2 class="pad1">Just another example</h2>
-<div class="code">powershell -NoProfile -ExecutionPolicy Unrestricted -Command "set run $TRUE; set xml 'https://conemu.github.io/ConEmu.xml'; iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install2.ps1'))"</div>-->
+<code>powershell -NoProfile -ExecutionPolicy Unrestricted -Command "set ver 'alpha'; set dst 'C:\ConEmu'; set lnk $TRUE; set run $TRUE; set xml 'https://conemu.github.io/ConEmu.xml'; iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install2.ps1'))"</code>
 
 <h2 class="pad1">Manual installation</h2>
 <div><a href="http://www.fosshub.com/ConEmu.html"><img src="http://conemu-maximus5.googlecode.com/svn/files/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"/></div>
@@ -94,6 +59,8 @@ iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install
 </td><td style="width:5pt">&nbsp;</td>
 <td width="230" valign="top" align="center"> <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation+&amp;sort=-modified" rel="nofollow"><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmu2013.png" title="Helping with documentation"></img></a><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3LV8XTRBK9K4E" rel="nofollow"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donation" title="Donate ConEmu"></img></a> <a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" rel="nofollow"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></img></a> </td>
 </tr></table>
+
+</div>
 </div>
 
 </body>
