Fix 'canonical' href

--- a/auto.html
+++ b/auto.html
@@ -6,7 +6,7 @@
 
  <link rel="icon" type="image/vnd.microsoft.icon" href="https://conemu.github.io/conemu.ico">
 
- <link rel="canonical" href="http://conemu.github.io" />
+ <link rel="canonical" href="http://conemu.github.io/auto.html" />
 
  <link rel="stylesheet" href="main.css">
 
