--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
  <p><font size="3"><strong>Disclaimer</strong></font> </p>
  <p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like tab-completion, command history and others. ConEmu is advanced console window where you can run any shell of your choice. However, some of these features placed in <a href="https://code.google.com/p/conemu-maximus5/wiki/RoadMap">RoadMap</a>. Also you may try <a href="http://code.google.com/p/conemu-maximus5/wiki/ConEmu_Clink">Clink</a> for bash-style completion in cmd.exe and <a href="http://github.com/lzybkr/PSReadLine">PSReadLine</a> or <a href="http://powertab.codeplex.com/">PowerTab</a> in powershell.exe. </p>
  </td>
- <td width="230" valign="top" align="center"> <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation+&amp;sort=-modified" rel="nofollow"><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmu2013.png" title="Helping with documentation"></img></a><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3LV8XTRBK9K4E" rel="nofollow"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donation" title="Donate ConEmu"></img></a> <a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" rel="nofollow"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></img></a> </td>
+ <td width="230" valign="top" align="center"> <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation+&amp;sort=-modified"><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmu2013.png" title="Helping with documentation"></img></a><a
+	href="donate.html"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donation" title="Donate ConEmu"></img></a> <a
+	href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" rel="nofollow"><img
+	src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu" border="0"></img></a>
+ </td>
  </tr></table>
  </p>
  <p><font size="3"><strong>History</strong></font> </p>
