--- a/donate.html
+++ b/donate.html
@@ -17,10 +17,10 @@
 <div class="wrapper">
 <div class="maincol">
 
-<div class="text">Flattr ConEmu on github<a
-	href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub">
-	<br>
-	<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu" border="0"></img></a></div>
+<div class="text">Flattr ConEmu on github<br>
+	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
+	src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu"
+	border="0"></img></a></div>
 
 <div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
 
