--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,16 @@
 <div class="wrapper">
 <div class="maincol">
 
-<div class="text">Flattr ConEmu on github<br>
+<h2>Support ConEmu</h2>
+
+<h3><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h3>
+<div class="text">
+Z190363130005<br>
+E294160643493<br>
+R407008788841</div>
+
+<h3><a href="https://flattr.com/">Flattr microdonations</a></h3>
+<div class="text">
 	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
 	src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu"
 	border="0"></img></a></div>
@@ -26,6 +35,8 @@
 
 </div>
 </div>
+
+<div class="footer" align="center"><a href="http://conemu.github.io/">Back to project site</a></div>
 
 </body>
 </html>
