--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-9200434-5', 'auto');
-  ga('create', 'UA-9200434-1', 'auto', {'name': 'gcodeTracker'});
+  //ga('create', 'UA-9200434-1', 'auto', {'name': 'gcodeTracker', 'cookieDomain': 'none'});
   ga('send', 'pageview');
-  ga('gcodeTracker.send', 'pageview');
+  //ga('gcodeTracker.send', 'pageview');
 
 </script>
  
