Add local img for flattr

--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@ R407008788841</div>
 <h3><a href="https://flattr.com/">Flattr microdonations</a></h3>
 <div class="text">
 	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
-	src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu"
+	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
 	border="0"></img></a></div>
 
 <div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
