--- a/donate.html
+++ b/donate.html
@@ -44,6 +44,7 @@ R407008788841</div>
 	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
 	border="0"></img></a></div>
 
+<h3>PayPal</h3>
 <div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
 
 </div>
