--- a/donate.html
+++ b/donate.html
@@ -32,6 +32,19 @@
 
 <h2>Support ConEmu</h2>
 
+<h3><a href="https://money.yandex.ru">Yandex.Money</a></h3>
+<div class="text Yinfo">
+Wallet: 4100 1198 3971 991<br>
+Currency is RUR: 10 USD ≈ 580 RUR, 10 EUR ≈ 710 RUR.<br>
+After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
+</div>
+<div>
+<iframe
+  frameborder="0" allowtransparency="true" scrolling="no"
+  src="https://money.yandex.ru/embed/shop.xml?account=410011983971991&quickpay=shop&payment-type-choice=on&writer=seller&targets=ConEmu+donation&default-sum=&button-text=04&comment=on&hint=&mail=on&successURL=http%3A%2F%2Fconemu.github.io"
+  width="450" height="253">Your browser does not support &lt;iframe&gt; elements.</iframe>
+</div>
+
 <h3><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h3>
 <div class="text">
 Z190363130005<br>
