Add link to Issue 1808

--- a/donate.html
+++ b/donate.html
@@ -60,6 +60,9 @@ R407008788841</div>
 <h3>PayPal</h3>
 <div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
 
+<h3>Other options</h3>
+<div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site.</div>
+
 </div>
 </div>
 
