--- a/donate.html
+++ b/donate.html
@@ -35,7 +35,7 @@
 <h3><a href="https://money.yandex.ru">Yandex.Money</a></h3>
 <div class="text Yinfo">
 Wallet: 4100 1198 3971 991<br>
-Currency is RUR: 10 USD ≈ 580 RUR, 10 EUR ≈ 710 RUR.<br>
+Currency is Russian Rubles: 10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>
 After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
 </div>
 <div>
