Don't require payer email (still needs yandex acc?)

--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@ After you press ‘Donate’ button you will be passed to https Yandex.Money web
 <div>
 <iframe
   frameborder="0" allowtransparency="true" scrolling="no"
-  src="https://money.yandex.ru/embed/shop.xml?account=410011983971991&quickpay=shop&payment-type-choice=on&writer=seller&targets=ConEmu+donation&default-sum=&button-text=04&comment=on&hint=&mail=on&successURL=http%3A%2F%2Fconemu.github.io"
+  src="https://money.yandex.ru/embed/shop.xml?account=410011983971991&quickpay=shop&payment-type-choice=on&writer=seller&targets=ConEmu+donation&targets-hint=&default-sum=&button-text=04&comment=on&hint=&successURL=http%3A%2F%2Fconemu.github.io"
   width="450" height="253">Your browser does not support &lt;iframe&gt; elements.</iframe>
 </div>
 
