Box yandex donation

--- a/donate.html
+++ b/donate.html
@@ -38,7 +38,7 @@ Wallet: 4100 1198 3971 991<br>
 Currency is Russian Rubles: 10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>
 After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
 </div>
-<div>
+<div class="donatebox">
 <form method="POST" action="https://money.yandex.ru/quickpay/confirm.xml">
  <input type="hidden" name="receiver" value="410011983971991">
  <input type="hidden" name="formcomment" value="ConEmu.Maximus5@gmail.com">
@@ -50,7 +50,7 @@ After you press ‘Donate’ button you will be passed to https Yandex.Money web
  <input type="hidden" name="need-email" value="false" >
  <input type="hidden" name="need-phone" value="false">
  <input type="hidden" name="need-address" value="false">
-<table border="0">
+<table border="0" width="100%">
 <tr><td class="text Yinfo">Amount (rub):</td>
 <td><input type="number" name="sum" value="" data-type="number" ></td></tr>
 <tr><td class="text Yinfo">Comment (optional):</td>
