--- a/donate.html
+++ b/donate.html
@@ -30,7 +30,7 @@
 <div class="wrapper">
 <div class="maincol">
 
-<h2>Support ConEmu</h2>
+<h2 id="h0">Support ConEmu</h2>
 
 <h3><a href="https://money.yandex.ru">Yandex.Money</a></h3>
 <div class="text Yinfo">
