--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="wrapper">
 <div class="maincol" id="wikimaincol">
 
- <h2><a name="About_ConEmu"></a>About ConEmu <a href="#About_ConEmu" class="section_anchor"></a></h2>
+ <h2 id="h0"><a name="About_ConEmu"></a>About ConEmu <a href="#About_ConEmu" class="section_anchor"></a></h2>
  <p><table cellpadding="0" cellspacing="0" border="0"> <tr><td valign="top"> ConEmu-Maximus5 is a Windows console emulator with tabs, which presents multiple consoles and simple GUI applications as one customizable GUI window with various features. </p>
  <p>Initially, the program was created as a companion to <a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a> (<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>), my favorite shell replacement - file and archive management, command history and completion, powerful editor. </p>
  <p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="http://code.google.com/p/conemu-maximus5/issues/list" rel="nofollow">suggestions</a>. </p>
