Hide Yandex forms

--- a/donate.html
+++ b/donate.html
@@ -38,12 +38,18 @@ Wallet: 4100 1198 3971 991<br>
 Currency is Russian Rubles: 10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>
 After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
 </div>
+<!--
+<div>
+<iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?account=410011983971991&quickpay=small&any-card-payment-type=on&button-text=05&button-size=s&button-color=orange&targets=ConEmu+donation&default-sum=500&successURL=http%3A%2F%2Fconemu.github.io" width="113" height="31"></iframe>
+</div>
+-->
+<!--
 <div class="donatebox">
 <form method="POST" action="https://money.yandex.ru/quickpay/confirm.xml">
  <input type="hidden" name="receiver" value="410011983971991">
  <input type="hidden" name="formcomment" value="ConEmu.Maximus5@gmail.com">
  <input type="hidden" name="short-dest" value="ConEmu donation">
- <!-- <input type="hidden" name="label" value="$order_id"> -->
+ < !-- <input type="hidden" name="label" value="$order_id"> -- >
  <input type="hidden" name="quickpay-form" value="donate">
  <input type="hidden" name="targets" value="ConEmu donation">
  <input type="hidden" name="need-fio" value="false">
@@ -65,6 +71,7 @@ After you press ‘Donate’ button you will be passed to https Yandex.Money web
 </table>
 </form>
 </div>
+-->
 
 <h3><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h3>
 <div class="text">
