Add test bitcoin donate method

--- a/donate.html
+++ b/donate.html
@@ -91,6 +91,12 @@ R407008788841</div>
 <h3>Other options</h3>
 <div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site.</div>
 
+<h3><a href="https://bitcoin.org/en/faq">Bitcoin</a> (testing)</h3>
+<div class="text">BTC: <a href="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc?label=ConEmu-Maximus5&message=Support%20ConEmu%20development">1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc</a></div>
+<div><img
+	src="./img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
+	border="0"></img></div>
+
 </div>
 </div>
 
