Update donate page

--- a/donate.html
+++ b/donate.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
- <link rel="icon" type="image/vnd.microsoft.icon" href="https://conemu.github.io/conemu.ico">
+ <link rel="icon" type="image/vnd.microsoft.icon" href="./conemu.ico">
 
- <link rel="canonical" href="http://conemu.github.io/donate.html" />
+ <link rel="canonical" href="http://conemu.github.io" />
 
  <link rel="stylesheet" href="main.css">
 
@@ -22,34 +22,75 @@
   ga('send', 'pageview');
 
 </script>
-
+ 
 </head>
 
 <body>
 
 <div class="wrapper">
-<div class="maincol">
+<div class="maincol" id="wikimaincol">
 
-<h2 id="h0">Support ConEmu</h2>
+	<div class="header">
+		<div id="logo-block">
+			<h1><a href="http://conemu.github.io">ConEmu</a></h1>
+			<div id="logo-descr"><a href="http://conemu.github.io">Windows console emulator</a></div>
+		</div>
+		<div id="header-line"></div>
+	</div><!-- .header-->
 
-<h3><a href="https://money.yandex.ru">Yandex.Money</a></h3>
-<div class="text Yinfo">
-Wallet: 4100 1198 3971 991<br>
-Currency is Russian Rubles: 10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>
-After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
-</div>
+	<div class="middle">
+		<div class="container">
+			<div class="content">
+
+<!-- Content starts -->
+
+<h1 id="h0">Support ConEmu</h1>
+
+<h2>PayPal</h2>
+<div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
+<div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site,
+you may suggest other methods there.</div>
+
+<h2><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h2>
+<div class="text stext">Bitcoin is digital currency based on open-source software.
+<a href="https://bitcoin.org/en/faq">Bitcoin FAQ</a>.</div>
+<div class="text stext">Perhaps the easiest way to use it are online wallets, like <a href="https://www.coinbase.com/">coinbase</a> for example.
+AFAIK coinbase allows payments from linked Visa cards with US billing address.</div>  
+<div class="text">BTC: <a href="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc?label=ConEmu-Maximus5&message=Support%20ConEmu%20development">1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc</a></div>
+<div><img
+	src="./img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
+	border="0"></img></div>
+
+<h2><a href="https://flattr.com/">Flattr microdonations</a></h2>
+<div class="text stext"><a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808#c6">What is a Flattr and how it works</a>.</div>
+<div class="text">
+	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
+	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
+	border="0"></img></a></div>
+
+<h2><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h2>
+<div class="text stext">Wallets: <strong>Z190363130005</strong>, <strong>E294160643493</strong>, <strong>R407008788841</strong>.</div>
+
+<h2><a href="https://money.yandex.ru">Yandex.Money</a></h2>
+<div class="text stext">
+Wallet: <strong>4100 1198 3971 991</strong>, the currency is Russian Rubles.<br>
+<!--10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>-->
 <!--
 <div>
 <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?account=410011983971991&quickpay=small&any-card-payment-type=on&button-text=05&button-size=s&button-color=orange&targets=ConEmu+donation&default-sum=500&successURL=http%3A%2F%2Fconemu.github.io" width="113" height="31"></iframe>
 </div>
 -->
-<!--
+</div>
+<div class="text stext">
+Unfortunately this works only for Russia, Azerbaijan, Armenia, Belarus, Kazakhstan, Kyrgyzstan, Tajikistan, Turkmenistan, Uzbekistan, Ukraine.<br>
+After you press ‘Donate’ button you will be passed to https Yandex.Money website to confirm amount and start the transaction.
+</div>
+<div class="text stext">
 <div class="donatebox">
 <form method="POST" action="https://money.yandex.ru/quickpay/confirm.xml">
  <input type="hidden" name="receiver" value="410011983971991">
  <input type="hidden" name="formcomment" value="ConEmu.Maximus5@gmail.com">
  <input type="hidden" name="short-dest" value="ConEmu donation">
- < !-- <input type="hidden" name="label" value="$order_id"> -- >
  <input type="hidden" name="quickpay-form" value="donate">
  <input type="hidden" name="targets" value="ConEmu donation">
  <input type="hidden" name="need-fio" value="false">
@@ -71,36 +112,48 @@ After you press ‘Donate’ button you will be passed to https Yandex.Money web
 </table>
 </form>
 </div>
--->
-
-<h3><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h3>
-<div class="text">
-Z190363130005<br>
-E294160643493<br>
-R407008788841</div>
-
-<h3><a href="https://flattr.com/">Flattr microdonations</a></h3>
-<div class="text">
-	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
-	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
-	border="0"></img></a></div>
-
-<h3>PayPal</h3>
-<div class="text">Unfortunately, PayPal donations are not accepted to Russian accounts.</div>
-
-<h3>Other options</h3>
-<div class="text">There is an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site.</div>
-
-<h3><a href="https://bitcoin.org/en/faq">Bitcoin</a> (testing)</h3>
-<div class="text">BTC: <a href="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc?label=ConEmu-Maximus5&message=Support%20ConEmu%20development">1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc</a></div>
-<div><img
-	src="./img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
-	border="0"></img></div>
-
-</div>
 </div>
 
-<div class="footer" align="center"><a href="http://conemu.github.io/">Back to project site</a></div>
+<!-- Content ends -->
+
+			</div><!-- .content-->
+		</div><!-- .container-->
+
+		<div class="left-sidebar">
+			<div id="social">
+				<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
+				<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
+				<div id="soc-plus">
+					<div style="background: transparent; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 106px; height: 224px;"
+						id="___plusone_0"><iframe frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="background: transparent; position: static; top: 0px; width: 106px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 24px;" tabindex="0" vspace="0" width="100%"
+						id="I0_1419983428828" name="I0_1419983428828" src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?usegapi=1&amp;origin=http%3A%2F%2Fconemu.github.io&amp;url=http%3A%2F%2Fcode.google.com%2Fp%2Fconemu-maximus5%2F&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.j1QholfdnmY.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Ft%3Dzcms%2Frs%3DAGLTcCP1BSvtxoI3E2wzG7twjHbDrCUuHA#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh%2Conload&amp;id=I0_1419983428828&amp;parent=http%3A%2F%2Fconemu.github.io&amp;pfname=&amp;rpctoken=42383786" data-gapiattached="true"
+						title="+1"></iframe></div>
+				</div>
+			</div>
+			<div class="block">
+				<div class="blocktitle">Site menu</div>
+				<div class="blockcontent">
+					<ul>
+					<!-- Menu starts -->
+					<li><a href="./index.html"><span>Home</span></a></li>
+					<li><a href="http://www.fosshub.com/ConEmu.html"><span>Download</span></a></li>
+					<li><a class="MenuItemA" href="./donate.html"><span>Donate</span></a></li>
+					<li><a href="https://code.google.com/p/conemu-maximus5/wiki/TableOfContents?tm=6"><span>Documentation</span></a></li>
+					<!-- Menu ends -->
+					</ul>
+				</div>
+				<div class="blockbottom"></div>
+			</div>
+		</div><!-- .left-sidebar -->
+
+	</div><!-- .middle-->
+
+</div><!-- maincol -->
+</div>
+
+<div class="footer">
+	<div id="footertext">Copyright Maximus5 © 2015</div>
+</div><!-- .footer -->
 
 </body>
 </html>
