--- a/auto.html
+++ b/auto.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
- <link rel="icon" type="image/vnd.microsoft.icon" href="https://conemu.github.io/conemu.ico">
+ <link rel="icon" type="image/vnd.microsoft.icon" href="./conemu.ico">
 
- <link rel="canonical" href="http://conemu.github.io/auto.html" />
+ <link rel="canonical" href="http://conemu.github.io" />
 
  <link rel="stylesheet" href="main.css">
 
- <title>Automate install of ConEmu portable</title>
+ <title>ConEmu</title>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,15 +22,28 @@
   ga('send', 'pageview');
 
 </script>
-
+ 
 </head>
 
 <body>
 
 <div class="wrapper">
-<div class="maincol">
+<div class="maincol" id="wikimaincol">
 
-<table cellpadding="0" cellspacing="0"><tr><td valign="top">
+	<div class="header">
+		<div id="logo-block">
+			<h1><a href="http://conemu.github.io">ConEmu</a></h1>
+			<div id="logo-descr"><a href="http://conemu.github.io">Windows console emulator</a></div>
+		</div>
+		<div id="header-line"></div>
+	</div><!-- .header-->
+
+	<div class="middle">
+		<div class="container">
+			<div class="content">
+
+<!-- Content starts -->
+
 <h2 id="h0">Abstract</h2>
 <div class="text">If you need to automate your box installation, this page describes how to
 setup ConEmu via PowerShell with single command. Internet connection required.</div>
@@ -69,16 +82,47 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 <h2>Manual installation</h2>
 <div><a href="http://www.fosshub.com/ConEmu.html"><img src="http://conemu-maximus5.googlecode.com/svn/files/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"/></div>
 
-</td><td style="width:5pt">&nbsp;</td>
-<td width="230" valign="top" align="center"> <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation+&amp;sort=-modified"><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmu2013.png" title="Helping with documentation"></img></a><a
-	href="donate.html"><img
-	src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donation" title="Donate ConEmu"></img></a> <a
-	href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" rel="nofollow"><img
-	src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr ConEmu" title="Flattr ConEmu" border="0"></img></a> </td>
-</tr></table>
+<!-- Content ends -->
 
+			</div><!-- .content-->
+		</div><!-- .container-->
+
+		<div class="left-sidebar">
+			<div id="social">
+				<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
+				<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
+				<div id="soc-plus">
+					<div style="background: transparent; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 106px; height: 224px;"
+						id="___plusone_0"><iframe frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="background: transparent; position: static; top: 0px; width: 106px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 24px;" tabindex="0" vspace="0" width="100%"
+						id="I0_1419983428828" name="I0_1419983428828" src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?usegapi=1&amp;origin=http%3A%2F%2Fconemu.github.io&amp;url=http%3A%2F%2Fcode.google.com%2Fp%2Fconemu-maximus5%2F&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.j1QholfdnmY.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Ft%3Dzcms%2Frs%3DAGLTcCP1BSvtxoI3E2wzG7twjHbDrCUuHA#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh%2Conload&amp;id=I0_1419983428828&amp;parent=http%3A%2F%2Fconemu.github.io&amp;pfname=&amp;rpctoken=42383786" data-gapiattached="true"
+						title="+1"></iframe></div>
+				</div>
+			</div>
+			<div class="block">
+				<div class="blocktitle">Site menu</div>
+				<div class="blockcontent">
+					<ul>
+					<!-- Menu starts -->
+					<li><a href="./index.html"><span>Home</span></a></li>
+					<li><a href="http://www.fosshub.com/ConEmu.html"><span>Download</span></a></li>
+					<li><a class="MenuItemA" href="./auto.html"><span>Auto install</span></a></li>
+					<li><a href="./donate.html"><span>Donate</span></a></li>
+					<li><a href="https://code.google.com/p/conemu-maximus5/wiki/TableOfContents?tm=6"><span>Documentation</span></a></li>
+					<!-- Menu ends -->
+					</ul>
+				</div>
+				<div class="blockbottom"></div>
+			</div>
+		</div><!-- .left-sidebar -->
+
+	</div><!-- .middle-->
+
+</div><!-- maincol -->
 </div>
-</div>
+
+<div class="footer">
+	<div id="footertext">Copyright Maximus5 © 2015</div>
+</div><!-- .footer -->
 
 </body>
 </html>
