--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
- <link rel="icon" type="image/vnd.microsoft.icon" href="https://conemu.github.io/conemu.ico">
+ <link rel="icon" type="image/vnd.microsoft.icon" href="./conemu.ico">
 
  <link rel="canonical" href="http://conemu.github.io" />
 
