Reformat index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="maincol" id="wikimaincol">
 
  <h2 id="h0"><a name="About_ConEmu"></a>About ConEmu <a href="#About_ConEmu" class="section_anchor"></a></h2>
- <p><table cellpadding="0" cellspacing="0" border="0"><tr><td valign="top"> ConEmu-Maximus5 is a Windows console emulator with tabs, which presents multiple consoles and simple GUI applications as one customizable GUI window with various features. </p>
+ <p>ConEmu-Maximus5 is a Windows console emulator with tabs, which presents multiple consoles and simple GUI applications as one customizable GUI window with various features. </p>
  <p>Initially, the program was created as a companion to <a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a> (<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>), my favorite shell replacement - file and archive management, command history and completion, powerful editor. </p>
  <p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="http://code.google.com/p/conemu-maximus5/issues/list" rel="nofollow">suggestions</a>. </p>
  <p><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="./img/Downloads.png" alt="Downloads" title="Download ConEmu"></img></a></p>
@@ -39,13 +39,12 @@
  <p><a href="https://code.google.com/p/conemu-maximus5/wiki/Awards">Votes and awards</a> (vote for <a href="https://code.google.com/p/conemu-maximus5/wiki/Awards#Please,_vote_for_ConEmu" rel="nofollow">ConEmu</a>, if you please). </p>
  <p><font size="3"><strong>Disclaimer</strong></font> </p>
  <p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like tab-completion, command history and others. ConEmu is advanced console window where you can run any shell of your choice. However, some of these features placed in <a href="https://code.google.com/p/conemu-maximus5/wiki/RoadMap">RoadMap</a>. Also you may try <a href="http://code.google.com/p/conemu-maximus5/wiki/ConEmu_Clink">Clink</a> for bash-style completion in cmd.exe and <a href="http://github.com/lzybkr/PSReadLine">PSReadLine</a> or <a href="http://powertab.codeplex.com/">PowerTab</a> in powershell.exe. </p>
- </td>
+ <!--
  <td width="230" valign="top" align="center"> <a href="http://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=Type%3DDocumentation+&amp;sort=-modified"><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmu2013.png" title="Helping with documentation"></img></a><a
 	href="donate.html"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donation" title="Donate ConEmu"></img></a> <a
 	href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" rel="nofollow"><img
 	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu" border="0"></img></a>
- </td>
- </tr></table>
+ -->
  </p>
  <p><font size="3"><strong>History</strong></font> </p>
  <p>This project grew up from <a href="http://xs.nm.ru/" rel="nofollow">ConEmu by Zoin</a>. </p>
@@ -60,13 +59,9 @@
  <h2><a name="Installation"></a>Installation<a href="#Installation" class="section_anchor"></a></h2>
  <ol><li> Unpack all files (from appropriate &quot;<tt>ConEmuPack.*.7z</tt>&quot; archive) to the folder, containing &quot;<tt>far.exe</tt>&quot;, or install the &quot;<tt>ConEmuSetup.*.exe</tt>&quot; package. </li><ul><li>If You <strong>are</strong> using Far Manager, please ensure that ConEmu plugins (&quot;<tt>Plugins\ConEmu\ConEmu.dll</tt>&quot; etc.) are installed to Far Manager&#x27;s Plugins folder. </li><li>If You are <strong>not</strong> using Far Manager, You may unpack the files to any folder, and delete the &quot;<tt>Plugins</tt>&quot; subfolder. </li><li><strong>Warning</strong>: because of frequent non-backwards-compatible API changes in Far 3, it is strongly recommended to use the latest <strong>developer</strong> build when using ConEmu with Far 3. </li></ul><li> Import ConEmu&#x27;s macros into Far Manager. Macro files are located in the ConEmu.Addons directory. Each macro file has a description in its header. </li><li> By default (when started without command-line parameters), ConEmu runs &quot;<tt>far.exe</tt>&quot; from its home folder, or &quot;cmd.exe&quot;/&quot;tcc.exe&quot; if Far Manager was not found. Alternatively, You may indicate any root command by specifying a &quot;<a href="https://code.google.com/p/conemu-maximus5/wiki/Command_Line">/Cmd &lt;App with params&gt;</a>&quot; argument in ConEmu&#x27;s shortcut or command line.  </li></ol>
  <h2><a name="Screenshots"></a>Screenshots<a href="#Screenshots" class="section_anchor"></a></h2>
- <p><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmuSplits3.png" title="ConEmu splits and tabs"> <br><br>  </p>
+ <!--<p><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmuSplits3.png" title="ConEmu splits and tabs"> <br><br>  </p>-->
  <p><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmuTransparency.png" title="ConEmu Alpha transparency"> <br><br>  </p>
  <p><a href="https://code.google.com/p/conemu-maximus5/wiki/Screenshots">More screenshots</a> and <a href="https://code.google.com/p/conemu-maximus5/wiki/Screencasts">screencasts</a> </p>
- </div>
- </div>
- </td><tr>
-</table>
 
  </div>
  </div>
