--- a/index.html
+++ b/index.html
@@ -30,6 +30,43 @@
 <div class="wrapper">
 <div class="maincol" id="wikimaincol">
 
+	<div class="header">
+		<div id="logo-block">
+			<div>
+				<h1><a href="http://conemu.github.io">ConEmu</a></h1>
+				<div id="logo-descr"><a href="http://conemu.github.io">Windows terminal</a></div>
+				<div id="social">
+					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
+					<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
+					<div id="soc-plus">
+						<div style="background: transparent; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 124px; height: 26px;"
+							id="___plusone_0"><iframe frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="background: transparent; position: static; top: 0px; width: 88px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 24px;" tabindex="0" vspace="0" width="100%"
+							id="I0_1419983428828" name="I0_1419983428828" src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?usegapi=1&amp;origin=http%3A%2F%2Fconemu.github.io&amp;url=http%3A%2F%2Fcode.google.com%2Fp%2Fconemu-maximus5%2F&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.j1QholfdnmY.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Ft%3Dzcms%2Frs%3DAGLTcCP1BSvtxoI3E2wzG7twjHbDrCUuHA#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh%2Conload&amp;id=I0_1419983428828&amp;parent=http%3A%2F%2Fconemu.github.io&amp;pfname=&amp;rpctoken=42383786" data-gapiattached="true"
+							title="+1"></iframe></div>
+					</div>
+				</div>
+			</div>
+			<div style="overflow: hidden; width:728px; height:90px; position: relative; left: 210px; top: -90px;">
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- conemu.github.io -->
+				<ins class="adsbygoogle"
+				     style="display:inline-block;width:728px;height:90px"
+				     data-ad-client="ca-pub-8810818700876198"
+				     data-ad-slot="5792850468"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+		</div>
+		<div id="header-line"></div>
+	</div><!-- .header-->
+
+	<div class="middle">
+		<div class="container">
+			<div class="content">
+
+<!-- Content starts -->
+
  <h2 id="h0"><a name="About_ConEmu"></a>About ConEmu <a href="#About_ConEmu" class="section_anchor"></a></h2>
  <p>ConEmu-Maximus5 is a Windows console emulator with tabs, which presents multiple consoles and simple GUI applications as one customizable GUI window with various features. </p>
  <p>Initially, the program was created as a companion to <a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a> (<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>), my favorite shell replacement - file and archive management, command history and completion, powerful editor. </p>
@@ -63,8 +100,37 @@
  <p><img src="http://conemu-maximus5.googlecode.com/svn/files/ConEmuTransparency.png" title="ConEmu Alpha transparency"> <br><br>  </p>
  <p><a href="https://code.google.com/p/conemu-maximus5/wiki/Screenshots">More screenshots</a> and <a href="https://code.google.com/p/conemu-maximus5/wiki/Screencasts">screencasts</a> </p>
 
- </div>
- </div>
+<!-- Content ends -->
 
- </body>
+			</div><!-- .content-->
+		</div><!-- .container-->
+
+		<div class="left-sidebar">
+			<div class="block">
+				<div class="blocktitle">Site menu</div>
+				<div class="blockcontent">
+					<ul>
+					<!-- Menu starts -->
+					<li><a class="MenuItemA" href="./index.html"><span>Home</span></a></li>
+					<li><a href="http://www.fosshub.com/ConEmu.html"><span>Download</span></a></li>
+					<li><a href="./auto.html"><span>Auto install</span></a></li>
+					<li><a href="./donate.html"><span>Donate</span></a></li>
+					<li><a href="https://code.google.com/p/conemu-maximus5/wiki/TableOfContents?tm=6"><span>Documentation</span></a></li>
+					<!-- Menu ends -->
+					</ul>
+				</div>
+				<div class="blockbottom"></div>
+			</div>
+		</div><!-- .left-sidebar -->
+
+	</div><!-- .middle-->
+
+</div><!-- maincol -->
+</div>
+
+<div class="footer">
+	<div id="footertext">Copyright Maximus5 © 2015</div>
+</div><!-- .footer -->
+
+</body>
 </html>
